syntax = "proto3";

option csharp_namespace = "Application";


service Users{
  rpc createAccount(CreateAccountMessage) returns (UsersMessage);
  rpc login(LoginMessage) returns (BoolMessage);
  rpc getDriver(UsersMessageId) returns (UsersMessage);
  rpc updateLicense(LicenseMessage) returns (NullMessage);
}

message LicenseMessage{
  int32 licenseNo = 1;
  int32 userId = 2;
}

message NullMessage{
  
}

message CreateAccountMessage{
  string name = 1;
  int32 licenseNo = 2;
  int32 phoneNumber = 3;
  string email = 4;
  string password = 5;
}

message UsersMessage{
  //not sure what we actually need on client side
  string name = 1;
  int32 phoneNumber = 2;
  string email = 3;
}

message LoginMessage{
  string email = 1;
  string password = 2;
}

message BoolMessage{
  bool status = 1;
  int32 userId = 2;
}

message UsersMessageId{
  int32 userId = 1;
}